<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_application">

    <TextView
        android:id="@+id/labelRegister"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="30dp"
        android:text="Đăng ký tài khoản"
        android:layout_centerHorizontal="true"
        android:textColor="@color/white"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="10dp"/>

    <!--<ImageView-->
        <!--android:id="@+id/imageViewLogo"-->
        <!--android:layout_width="wrap_content"-->
        <!--android:layout_height="wrap_content"-->
        <!--android:src="@drawable/logo"-->
        <!--android:layout_centerHorizontal="true"-->
        <!--android:layout_marginTop="@dimen/margin_top_register_10dp"/>-->

    <EditText
        android:id="@+id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/labelRegister"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        android:drawableStart="@drawable/drawable_email"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_below="@id/editTextUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:maxLength="20"
        android:drawableStart="@drawable/drawable_password"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextRetypePassword"
        android:layout_below="@id/editTextPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:hint="@string/repassword"
        android:inputType="textPassword"
        android:maxLength="20"
        android:drawableStart="@drawable/drawable_password"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextFullName"
        android:layout_below="@id/editTextRetypePassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/fullName"
        android:inputType="text"
        android:maxLength="50"
        android:drawableStart="@drawable/drawable_name"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <RadioGroup
        android:id="@+id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        android:layout_below="@+id/editTextFullName"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/gender"
            android:textSize="@dimen/text_size_edit_profile"
            android:drawableStart="@drawable/drawable_gender"
            android:drawablePadding="5dp"
            android:textColor="@color/gray"/>

        <RadioButton
            android:id="@+id/radioMale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/male"
            android:textColor="@color/white"
            android:textSize="@dimen/text_size_edit_profile"
            android:buttonTint="@color/white"
            android:layout_marginStart="15dp"
            android:checked="true"
            />

        <RadioButton
            android:id="@+id/radioFemale"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/female"
            android:textColor="@color/white"
            android:buttonTint="@color/white"
            android:textSize="@dimen/text_size_edit_profile"
            android:layout_marginStart="10dp"/>

    </RadioGroup>

    <EditText
        android:id="@+id/editTextAddress"
        android:layout_below="@id/radioGroupGender"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/address"
        android:inputType="text"
        android:maxLength="30"
        android:drawableStart="@drawable/drawable_address"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextPhoneNumber"
        android:layout_below="@id/editTextAddress"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/phoneNumber"
        android:inputType="phone"
        android:maxLength="11"
        android:drawableStart="@drawable/drawable_phone_number"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <EditText
        android:id="@+id/editTextDateOfBirth"
        android:layout_below="@id/editTextPhoneNumber"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="30dp"
        android:layout_marginRight="30dp"
        android:layout_centerVertical="true"
        android:hint="@string/dateOfBirth"
        android:inputType="date"
        android:maxLength="10"
        android:drawableStart="@drawable/drawable_date_of_birth"
        android:drawablePadding="5dp"
        android:background="@drawable/selector_background_edit_text"
        android:padding="@dimen/padding_edit_text_7dp"
        android:layout_marginTop="@dimen/margin_top_register_10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@id/editTextDateOfBirth"
        android:gravity="center_horizontal"
        android:layout_marginTop="@dimen/margin_top_register_10dp">
        <Button
            android:id="@+id/buttonRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/register"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/round_button"
            android:layout_weight="3"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="20dp"
            />

        <Button
            android:id="@+id/buttonCancelRegister"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:background="@drawable/round_button_danger"
            android:layout_weight="3"
            android:layout_marginEnd="30dp"/>
    </LinearLayout>
</RelativeLayout>